@@ -2,7 +2,7 @@
 	<side_gallery>0</side_gallery>
 	<layout_chooser>0</layout_chooser>
 	<side_links>0</side_links>
-	<login>1</login>
+	<login>0</login>
 	<side_category>1</side_category>
 	<side_archives>1</side_archives>
 	<syndication>1</syndication>
